# kiracidan-api

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 11e01a3ad2b5_add_new_column_payments_table.py  75595f9a009d_create_comments_table.py  79f9b33e9f61_create_roles_table.py  7a15424d9c7c_insert_default_home_status_types_into_.py  a8b4cf6c8dc9_create_home_table.py  d0e28d45d8e4_create_users_table.py  d20d0230ca8d_create_payment_types_table.py  e7b4f55ddcfb_create_payments_table.py  f22e322b8bb6_insert_default_roles_into_role_table.py  f9231b8d71bd_insert_default_payment_types_into_the_.py  fb62a05535ae_create_home_status_table.py  ff8f14ba0f38_add_password_column_user_table.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py
app/core/: auth_controller.py
app/core/auth/: __init__.py  abstract.py  constants.py  handler.py  token.py  token_decoder_handler.py  token_generator_handler.py  token_response.py  token_role_check_handler.py
app/core/auth/token/: __init__.py
app/core/auth/token/home_owner/: __init__.py  home_owner.py
app/core/auth/token/tenant/: tenant.py
app/db/: __init__.py  postgres.py  singleton_redis.py
app/models/: __init__.py  comments.py  home.py  home_status.py  payment_types.py  payments.py  roles.py  user.py
app/models/abstract/: __init__.py  base_user.py
app/schemes/: user.py
app/services/user_service/: __init__.py  auth.py
test/: test_authentication.py
test/test_auth/: test_token.py
